--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@mantine/hooks": "^7.9.0",
     "@mantine/modals": "^7.9.0",
     "@mantine/notifications": "^7.9.0",
+    "@tabler/icons-react": "^3.3.0",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
