--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.3.0",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
