--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@mantine/modals": "^7.9.0",
     "@mantine/notifications": "^7.9.0",
     "@tabler/icons-react": "^3.3.0",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
