--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.3.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "mongodb": "^6.7.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
