--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,12 +34,13 @@ jobs:
         echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
         npm run build
 
+    - name: Install OpenConnect
+      run: sudo apt-get install -y openconnect
+
     - name: Connect to VPN
       run: |
-        sudo openconnect --protocol=gp --user=${{ secrets.VPN_USER }} --passwd-on-stdin ${{ secrets.VPN_HOST }}
-      env:
-        VPN_PASSWORD: ${{ secrets.VPN_PASSWORD }}
-
+        echo "${{ secrets.VPN_PASSWORD }}" | sudo openconnect --protocol=gp --user=${{ secrets.VPN_USER }} --passwd-on-stdin ${{ secrets.VPN_HOST }}
+      
     - name: Verify VPN connection
       run: ip a
 
