--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,10 +39,9 @@ jobs:
 
     - name: Connect to VPN
       run: |
-        sudo openconnect --protocol=gp --user=${{ secrets.VPN_USER }} --passwd-on-stdin ${ secrets.VPN_HOST }}
+        echo "${{ secrets.VPN_PASSWORD }}" | sudo openconnect --protocol=gp --user=${{ secrets.VPN_USER }} --passwd-on-stdin ${{ secrets.VPN_HOST }} -v
       env:
         VPN_PASSWORD: ${{ secrets.VPN_PASSWORD }}
-        VPN_HOST: ${{ secrets.VPN_HOST }}
 
     - name: Verify VPN connection
       run: ip a
