--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,26 +37,34 @@ jobs:
     - name: Install OpenConnect
       run: sudo apt-get install -y openconnect
 
+    - name: Install sshpass
+      run: sudo apt-get install -y sshpass
+
     - name: Connect to VPN
       run: |
-        echo "${{ secrets.VPN_PASSWORD }}" | sudo openconnect --protocol=gp --user=${{ secrets.VPN_USER }} --passwd-on-stdin ${{ secrets.VPN_HOST }} -v
+        echo "${{ secrets.VPN_PASSWORD }}" | sudo openconnect --protocol=gp --user=${{ secrets.VPN_USER }} --passwd-on-stdin ${{ secrets.VPN_HOST }} -b
       env:
         VPN_PASSWORD: ${{ secrets.VPN_PASSWORD }}
+        VPN_USER: ${{ secrets.VPN_USER }}
+        VPN_HOST: ${{ secrets.VPN_HOST }}
 
     - name: Verify VPN connection
       run: ip a
 
+    - name: List network routes
+      run: ip route
+
+    - name: Test internal connectivity with SSH
+      run: |
+        sshpass -p "${{ secrets.INTERNAL_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.INTERNAL_USER }}@${{ secrets.INTERNAL_RESOURCE_IP }} 'echo "SSH connection successful"'
+
     - name: Deploy to Server
-      uses: easingthemes/ssh-deploy@v2.1.5
-      with:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-        REMOTE_USER: ${{ secrets.REMOTE_USER }}
-        SOURCE: "front/.next"
-        TARGET: "~/MIRO/Front_Miro/front/.next"
+      run: |
+        sshpass -p "${{ secrets.INTERNAL_SSH_PASSWORD }}" rsync -avz --delete front/.next ${{ secrets.INTERNAL_USER }}@${{ secrets.INTERNAL_RESOURCE_IP }}:~/MIRO/Front_Miro/front/.next
 
     - name: Restart PM2
-      run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'cd ~/MIRO/Front_Miro/front && pm2 restart Front_Miro'
+      run: |
+        sshpass -p "${{ secrets.INTERNAL_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.INTERNAL_USER }}@${{ secrets.INTERNAL_RESOURCE_IP }} 'cd ~/MIRO/Front_Miro/front && pm2 restart Front_Miro'
 
     - name: Post Checkout repository
       run: echo "Deployment complete"
