--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "exceljs": "^4.4.0",
+    "fecha": "^4.2.3",
     "file-saver": "^2.0.5",
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
