--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@mantine/core": "^7.9.0",
@@ -29,6 +30,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.1.5",
+    "@semantic-release/release-notes-generator": "^14.0.1",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20.14.15",
     "@types/react": "^18",
@@ -36,6 +41,7 @@
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
+    "semantic-release": "^24.0.0",
     "typescript": "^5"
   }
 }
