--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.14.0'
+
     - name: Install OpenConnect
       run: sudo apt-get install -y openconnect
 
@@ -64,6 +69,6 @@ jobs:
     - name: Restart PM2
       run: |
         sshpass -p "${{ secrets.INTERNAL_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.INTERNAL_USER }}@${{ secrets.INTERNAL_RESOURCE_IP }} 'cd ~/MIRO/Front_Miro/front && pm2 restart Front_Miro'
-        
+
     - name: Post Checkout repository
       run: echo "Deployment complete"
