--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.9.0",
     "@mantine/modals": "^7.9.0",
     "@mantine/notifications": "^7.9.0",
+    "@svgr/webpack": "^8.1.0",
     "@tabler/icons-react": "^3.14.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
