--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "release": "semantic-release"
   },
   "dependencies": {
-    "@mantine/core": "^7.9.0",
-    "@mantine/dates": "^7.9.0",
-    "@mantine/dropzone": "^7.9.0",
+    "@mantine/core": "^7.11.0",
+    "@mantine/dates": "^7.11.0",
+    "@mantine/dropzone": "^7.11.0",
     "@mantine/form": "^7.9.0",
-    "@mantine/hooks": "^7.9.0",
-    "@mantine/modals": "^7.9.0",
-    "@mantine/notifications": "^7.9.0",
+    "@mantine/hooks": "^7.11.0",
+    "@mantine/modals": "^7.11.0",
+    "@mantine/notifications": "^7.11.0",
     "@svgr/webpack": "^8.1.0",
     "@tabler/icons-react": "^3.14.0",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "exceljs": "^4.4.0",
     "fecha": "^4.2.3",
     "file-saver": "^2.0.5",
     "lottie-react": "^2.4.0",
+    "mantine-datatable": "^7.12.4",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
