--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "fecha": "^4.2.3",
     "file-saver": "^2.0.5",
