--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "exceljs": "^4.4.0",
     "fecha": "^4.2.3",
     "file-saver": "^2.0.5",
+    "front": "file:",
     "lottie-react": "^2.4.0",
     "mantine-datatable": "^7.12.4",
     "next": "^14.2.13",
