Changes for detecting links

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "fecha": "^4.2.3",
     "file-saver": "^2.0.5",
     "front": "file:",
+    "linkify-react": "^4.2.0",
+    "linkifyjs": "^4.2.0",
     "lottie-react": "^2.4.0",
     "mantine-datatable": "^7.12.4",
     "next": "^14.2.13",
