--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mantine-datatable": "^7.12.4",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
+    "node-cron": "^4.0.5",
     "react": "^18",
     "react-dom": "^18"
   },
