--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
+/// <reference path="./types/next-auth.d.ts" />
+
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -11,6 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "incremental": true,
     "plugins": [
       {
